--- a/index.html
+++ b/index.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/home-page-styles.css">
-  <script src="./assets/scripts/script.js"></script>
   <title>Spider-Man | Multiversos</title>
+  <link rel="stylesheet" href="./assets/css/home-page-styles.css">
+  <script src="./assets/scripts/card-hover-animation.js" defer></script>
 </head>
 <body>
+ <!-- Bem-css = acrônimo/abreviação de bloco, elemento e modificador, que é um padrão de nomenclatura css.
+
+    bloco - entidade independente do site, ex: menu.
+
+    elemento - compõe a entidade, ex: item do menu.
+
+    modificador - pode mudar características, ex: ativo ou inativo.
+
+    Também pode-se usar um prefixo ou não indicando o projeto, como em s-menu, o "s" é de spider-man.
+  -->
+
+  <!-- Criação do Carrossel 3D:
+
+    Plano Cartesiano (eixos XYZ) 
+      X = Valores positivos vem a direita e negativos vão a esquerda
+      Y = Valores positivos vem acima e negativos vão abaixo
+      Z = Valores positivos vem a frente e negativos vão atrás
+
+    Através da Propriedade Transform dá para manipular os elementos dentro desses eixos:
+      - Propriedade translate (transladar ou mover)
+      - Propriedade rotate (rotacionar)
+      - Propriedade scale (escalar)
+      - Propriedade skew (distorcer)
+      - Propriedade matrix (mix de tudo numa função só)
+
+    Perspectiva - Forma na qual se observa um objeto. Nas imagens dá a ilusão de tridimensionalidade. A propriedade Perspective define quão longe um elemento está longe do usuário.
+     - Um valor baixo resulta num efeito 3D mais intenso do que um valor alto.
+  -->
   <nav class="s-menu">
     <ul>
       <li class="s-menu__item">
-        <a href="/">Página Inicial</a>
+        <a href="./index.html">Página Inicial</a>
       </li>
       <li class="s-menu__item">
-        <a href="#">Tobey Maguire</a>
+        <a href="./pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
         <img src="./assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
       </li>
       <li class="s-menu__item">
-        <a href="#">Tom Holland</a>
+        <a href="./pages/tom-holland/spiderman1.html">Tom Holland</a>
       </li>
       <li class="s-menu__item">
-        <a href="#">Andrew Garfield</a>
+        <a href="./pages/andrew-garfield/spiderman1.html">Andrew Garfield</a>
       </li>
     </ul>
   </nav>
+
   <div class="s-container">
-    <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
-      <a href="./pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
+    <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);"> <!-- Bandeja que fará o efeito 3D -->
+      <a href="#" class="s-card" id="spider-man-01">
+        <img src="./assets/images/pic-sm-bg-01.jpg" class="s-card__background">
+        <img src="./assets/images/spider-man-01.png" alt="Tobey Maguire" class="s-card__image">
         <h2 class="s-card__title">Tobey Maguire</h2>
       </a>
-      <a href="./pages/tom-holland/spiderman1.html" class="s-card" id="spider-man-02">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-02.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-02.png" alt="Tom Holland">
+  
+      <a href="#" class="s-card" id="spider-man-02">
+        <img src="./assets/images/pic-sm-bg-02.jpg" class="s-card__background">
+        <img src="./assets/images/spider-man-02.png" alt="Tom Holland" class="s-card__image">
         <h2 class="s-card__title">Tom Holland</h2>
       </a>
-      <a href="./pages/andrew-garfield/spiderman1.html" class="s-card" id="spider-man-03">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
+  
+      <a href="#" class="s-card" id="spider-man-03">
+        <img src="./assets/images/pic-sm-bg-03.jpg" class="s-card__background">
+        <img src="./assets/images/spider-man-03.png" alt="Andrew Garfield" class="s-card__image">
         <h2 class="s-card__title">Andrew Garfield</h2>
       </a>
     </div>
   </div>
 
   <div class="s-controller">
-    <div id="1" onclick="selectCarouselItem(this)" class="s-controller__button s-controller__button--active">
-      01
-    </div>
-    <div id="2" onclick="selectCarouselItem(this)" class="s-controller__button">
-      02
-    </div>
-    <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">
-      03
-    </div>
+    <!-- Selecionando cada elemento, poderia ser feito com eventListener... -->
+    <div id="1" onclick="selectCarouselItem(this)" class="s-controller__button s-controller__button--active">01</div>
+    <div id="2" onclick="selectCarouselItem(this)" class="s-controller__button">02</div>
+    <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">03</div>
     <div class="s-controller__line"></div>
   </div>
 </body>
