--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spider Man | Multiverso</title>
+  <title>Multiverso | Spiderman</title>
   <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
-</head>
+  <!-- Lib Fancybox (Define o padrão para experiência de usuário premium em exibição multimídia.) parte CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+  />
+  <style>
+    .navigator .navigator__icon{
+      left: 2px;
+    }
 
+    @media (min-width: 768px) {
+      .navigator .navigator__icon{
+        left: 25px;
+      }
+    }
+  </style>
+</head>
 <body>
   <div class="s-wrapper">
-
-    <video autoplay loop>
-      <source src="../../assets/videos/amazing-spiderman2-2014-trailer.mp4" type="video/mp4" />
+    <video autoplay loop muted>
+      <source src="../../assets/videos/amazing-spiderman2-2014-trailer.mp4" type="video/mp4">
     </video>
 
-    <!--  Coluna da esquerda com menu (Left Column with menu)  -->
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
           <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1-andrew.png" />
+            <img src="../../assets/images/icons/spiderman1-andrew.png">
           </a>
         </div>
+
         <ul>
           <li><a href="spiderman1.html">01</a></li>
-          <li><a href="#02" class="active">02</a></li>
+          <li><a href="spiderman2.html">02</a></li>
         </ul>
       </nav>
     </div>
-    <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content">
+    <div class="s-main-content"> <!-- .s-spiderman-01-02 -->
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
-            title="Spiderman 2 (2005)" />
+          <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="The Amazing Spider-man 2 (2014)" title="The Amazing Spider-man 2 (2014)">
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2005</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2014</li>
+              <li>Diretor: Mark Webb</li>
             </ul>
           </div>
+
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Quando uma falha na experiência de fusão nuclear resulta em uma explosão que mata sua esposa, o Dr. Otto Octavius é transformado em Dr. Octopus, um ciborgue com tentáculos de metal. Doc Ock culpa o Homem-Aranha pelo acidente e quer vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva..</p>
+            <p><strong>Sinopse:</strong>&nbsp;O jovem Peter Parker está fascinado com as habilidades que adquiriu como Homem-Aranha. Agora, ele precisa lidar com dois problemas: o retorno de um velho amigo, Harry Osborn, e a chegada de um vilão mais forte e poderoso, Electro.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="#" class="link-button">
+              <a href="https://www.youtube.com/watch?v=PfUDLzyC1cM" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
@@ -70,13 +81,29 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png" alt=""></a></li>
+            <li>
+              <a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png">
+                <img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png">
+                <img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png">
+              </a>
+            </li>
+            <li>
+              <a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png">
+                <img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png">
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Lib Fancybox (Suporta imagens, vídeos, mapas, conteúdo inline, iframes e qualquer outro conteúdo HTML.) parte JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="../../assets/scripts/display-multimedia-content.js"></script>
 </body>
 </html>
