--- a/pages/tobey-maguire/spiderman2.html
+++ b/pages/tobey-maguire/spiderman2.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multiverso | Spiderman</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
+  <link rel="stylesheet" href="../../assets/css/internal.css">
+  <!-- Lib Fancybox (Define o padrão para experiência de usuário premium em exibição multimídia.) parte CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+  />
+  <style>
+    .navigator .navigator__icon{
+      left: -15px;
+    }
+
+    @media (min-width: 768px) {
+      .navigator .navigator__icon{
+        left: 26px;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="s-wrapper">
-    
-    <video loop autoplay muted>
-      <source src="../../assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4" />
+    <video autoplay loop muted>
+      <source src="../../assets/videos/spiderman2-2004-trailer.mp4" type="video/mp4">
     </video>
 
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
           <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1.png" />
+            <img src="../../assets/images/icons/spiderman1.png">
           </a>
         </div>
+
         <ul>
           <li><a href="spiderman1.html">01</a></li>
-          <li><a href="#02">02</a></li>
+          <li><a href="spiderman2.html">02</a></li>
           <li><a href="spiderman3.html">03</a></li>
         </ul>
       </nav>
     </div>
 
-    <div class="s-main-content">
+    <div class="s-main-content"> <!-- .s-spiderman-01-02 -->
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tobey/movie-02/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+          <img src="../../assets/images/spiderman-tobey/movie-02/logo.png" alt="Spider-man 2 (2004)" title="Spider-man 2 (2004)">
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2002</li>
+              <li>Ano: 2004</li>
               <li>Diretor: Sam Raimi</li>
             </ul>
           </div>
 
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Depois de ser picado por uma aranha geneticamente modificada em uma
-              demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los
-              para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém,
-              ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes
-              para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico
-              Duende Verde.</p>
+            <p><strong>Sinopse:</strong>&nbsp;O Dr. Otto Octavius é transformado em Doutor Octopus quando uma falha em uma experiência de fusão nuclear resulta em uma explosão que mata sua esposa. Ele culpa o Homem-Aranha pelo acidente e deseja vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="https://www.youtube.com/watch?v=TYMMOjBUPMM" class="link-button" target="_blank">
+              <a href="https://www.youtube.com/watch?v=1s9Yln0YwCw" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
@@ -69,25 +77,24 @@
             </li>
           </ul>
         </div>
-
       </div>
 
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
+              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-02/gallery/image-01.png">
+                <img src="../../assets/images/spiderman-tobey/movie-02/gallery/image-01.png">
               </a>
             </li>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
+              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-02/gallery/image-02.png">
+                <img src="../../assets/images/spiderman-tobey/movie-02/gallery/image-02.png">
               </a>
             </li>
             <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
+              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-02/gallery/image-03.png">
+                <img src="../../assets/images/spiderman-tobey/movie-02/gallery/image-03.png">
               </a>
             </li>
           </ul>
@@ -95,9 +102,9 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-  <script>
-    //  JavaScript will go here
-  </script>
+
+  <!-- Lib Fancybox (Suporta imagens, vídeos, mapas, conteúdo inline, iframes e qualquer outro conteúdo HTML.) parte JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="../../assets/scripts/display-multimedia-content.js"></script>
 </body>
 </html>
