--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spider Man | Multiverso</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <title>Multiverso | Spiderman</title>
+  <link rel="stylesheet" href="../../assets/css/internal.css">
+  <!-- Lib Fancybox (Define o padrão para experiência de usuário premium em exibição multimídia.) parte CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+  />
+  
 </head>
-
 <body>
   <div class="s-wrapper">
-    <video autoplay loop>
-      <source src="../../assets/videos/spiderman3-2021-trailer.mp4" type="video/mp4" />
+    <video autoplay loop muted>
+      <source src="../../assets/videos/spiderman3-2021-trailer.mp4" type="video/mp4">
     </video>
-    <!--  Coluna da esquerda com menu (Left Column with menu)  -->
+
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
           <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1-tom.png" />
+            <img src="../../assets/images/icons/spiderman1-tom.png">
           </a>
         </div>
+
         <ul>
           <li><a href="spiderman1.html">01</a></li>
           <li><a href="spiderman2.html">02</a></li>
-          <li><a href="#" class="active">03</a></li>
+          <li><a href="spiderman3.html">03</a></li>
         </ul>
       </nav>
     </div>
-    <!-- FIM - Coluna da esquerda com menu (Left Column with menu)  -->
 
-    <div class="s-main-content">
+    <div class="s-main-content"> <!-- .s-spiderman-01-01 -->
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2007)"
-            title="Spiderman 3 (2007)" />
+          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spider-man: No Way Home (2021)" title="Spider-man: No Way Home (2021)">
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2007</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2021</li>
+              <li>Diretor: Jon Watts</li>
             </ul>
           </div>
+
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;O relacionamento entre Peter Parker e Mary Jane parece estar dando certo, mas outros problemas começam a surgir. A roupa de Homem-Aranha torna-se preta e acaba controlando Peter - apesar de aumentar seus poderes, ela revela e amplia o lado obscuro de sua personalidade. Com isso, os vilões Venom e Homem-Areia tentam destruir o herói.</p>
+            <p><strong>Sinopse:</strong>&nbsp;Peter Parker tem a sua identidade secreta revelada e pede ajuda ao Doutor Estranho. Quando um feitiço para reverter o evento não sai como o esperado, o Homem-Aranha e seu companheiro dos Vingadores precisam enfrentar inimigos de todo o multiverso.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="#" class="link-button">
+              <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
@@ -65,18 +68,23 @@
           </ul>
         </div>
       </div>
-      
+
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li>
+              <a data-fancybox href="../../assets/images/spiderman-tom/movie-03/background-p.png">
+                <img src="../../assets/images/spiderman-tom/movie-03/background-p.png">
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Lib Fancybox (Suporta imagens, vídeos, mapas, conteúdo inline, iframes e qualquer outro conteúdo HTML.) parte JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="../../assets/scripts/display-multimedia-content.js"></script>
 </body>
 </html>
