--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multiverso | Spiderman</title>
-  <link rel="stylesheet" href="../../assets/css/internal.css">
+  <link rel="stylesheet" href="/assets/css/internal.css">
   <!-- Lib Fancybox (Define o padrão para experiência de usuário premium em exibição multimídia.) parte CSS -->
   <link
     rel="stylesheet"
