--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multiverso | Spiderman</title>
-  <link rel="stylesheet" href="../../assets/css/internal.css">
+  <link rel="stylesheet" href="/spider-man-multiversos-dio/assets/css/internal.css">
   <!-- Lib Fancybox (Define o padrão para experiência de usuário premium em exibição multimídia.) parte CSS -->
   <link
     rel="stylesheet"
@@ -105,6 +105,6 @@
 
   <!-- Lib Fancybox (Suporta imagens, vídeos, mapas, conteúdo inline, iframes e qualquer outro conteúdo HTML.) parte JS -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script src="../../assets/scripts/display-multimedia-content.js"></script>
+  <script src="/spider-man-multiversos-dio/assets/scripts/display-multimedia-content.js"></script>
 </body>
 </html>
