Mudanças para origem

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider-Man | Multiversos</title>
-  <link rel="stylesheet" href="/spider-man-multiversos-dio/assets/css/home-page-styles.css">
-  <script src="/spider-man-multiversos-dio/assets/scripts/card-hover-animation.js" defer></script>
+  <link rel="stylesheet" href="./assets/css/home-page-styles.css">
+  <script src="./assets/scripts/card-hover-animation.js" defer></script>
 </head>
 <body>
  <!-- Bem-css = acrônimo/abreviação de bloco, elemento e modificador, que é um padrão de nomenclatura css.
